@@ -1,3 +1,8 @@
+2013-11-01  Marc Glisse  <marc.glisse@inria.fr>
+
+	PR c++/58834
+	* pt.c (type_dependent_expression_p): Handle null argument.
+
 2013-11-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* semantics.c (finish_omp_clauses) <case OMP_CLAUSE_UNIFORM>: Go to
